force-app/main/default/objects/Business_Review__c/Business_Review__c.object-meta.xml
<CustomObject>
    <label>Business Review</label>
    <nameField>
        <label>Business Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>