force-app/main/default/objects/Business_Review__c/fields/Business_Review_Assessment_Image__c.field-meta.xml
<CustomField>
    <fullName>Business_Review_Assessment_Image__c</fullName>
    <formula>IF( ISPICKVAL(Bussiness_Review_Assessment__c,&quot;Positive&quot; ),IMAGE(&quot;/resource/green&quot;,&quot;Positive&quot;),
IF( ISPICKVAL(Bussiness_Review_Assessment__c,&quot;Neutral&quot;) ,IMAGE(&quot;/resource/yellow&quot;,&quot;Neutral&quot;),
IMAGE(&quot;/resource/red&quot;,&quot;Negative&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Review Assessment Image</label>
    <type>Text</type>
</CustomField>