force-app/main/default/objects/Business_Review__c/fields/Bussiness_Review_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Bussiness_Review_Assessment__c</fullName>
    <label>Business Review Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
                <label>Positive (Green)</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <label>Neutral (Amber)</label>
            </value>
            <value>
                <fullName>Negative</fullName>
                <label>Negative (Red)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>