force-app/main/default/objects/Business_Review__c/fields/Customer_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Reviews</relationshipLabel>
    <relationshipName>Business_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>