force-app/main/default/objects/Business_Review__c/fields/Customer_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Reviews (Customer Contact 2)</relationshipLabel>
    <relationshipName>Business_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>