force-app/main/default/objects/Business_Review__c/fields/Internal_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Reviews (Internal Contact 1)</relationshipLabel>
    <relationshipName>Business_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>