force-app/main/default/objects/Business_Review__c/fields/Internal_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Reviews (Internal Contact 2)</relationshipLabel>
    <relationshipName>Business_Reviews3</relationshipName>
    <type>Lookup</type>
</CustomField>