force-app/main/default/objects/Business_Review__c/fields/Key_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Key_Concerns__c</fullName>
    <label>Key Concerns</label>
    <type>TextArea</type>
</CustomField>