force-app/main/default/objects/Business_Review__c/fields/Positives__c.field-meta.xml
<CustomField>
    <fullName>Positives__c</fullName>
    <label>Positives</label>
    <type>TextArea</type>
</CustomField>