force-app/main/default/objects/Business_Review__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiative</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Business Reviews</relationshipLabel>
    <relationshipName>Business_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>